// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HearingConversion Displays email fields when hearing type is switched from virtual 1`] = `
<DocumentFragment>
  <section
    class="cf-app-segment cf-app-segment--alt"
  >
    <h1
      class="cf-margin-bottom-0"
    >
      Convert to Virtual
    </h1>
    <span>
      Emails will be sent to the Veteran and POA / Representative to notify them that their virtual hearing link is no longer valid and they must appear in-person at the Board of Veterans’ Appeals Central Office.
    </span>
    <div>
      <div
        data-css-1a5irm0=""
        data-testid="read-only-testid"
      >
        <strong>
          Hearing Date
        </strong>
        <pre>
          07/06/2020
        </pre>
      </div>
      <div
        class="usa-grid css-1jfbwxw"
      >
        <div
          class="usa-width-one-half"
        >
          <span
            data-css-1042gbc=""
            data-css-q4lgq9=""
          >
            <fieldset
              class="usa-fieldset-inputs cf-form-radio "
            >
              <legend
                class=""
              >
                <strong>
                  <span>
                    Hearing Time 
                  </span>
                </strong>
              </legend>
              <div
                class="cf-form-radio-options"
              >
                <div
                  class="cf-form-radio-option"
                >
                  <input
                    id="hearingTime0_8:30 AM Eastern Time (US & Canada)"
                    name="hearingTime0"
                    type="radio"
                    value="8:30 AM Eastern Time (US & Canada)"
                  />
                  <label
                    class=""
                    for="hearingTime0_8:30 AM Eastern Time (US & Canada)"
                  >
                    8:30 AM Eastern Time (US & Canada)
                  </label>
                </div>
                <div
                  class="cf-form-radio-option"
                >
                  <input
                    id="hearingTime0_12:30 PM Eastern Time (US & Canada)"
                    name="hearingTime0"
                    type="radio"
                    value="12:30 PM Eastern Time (US & Canada)"
                  />
                  <label
                    class=""
                    for="hearingTime0_12:30 PM Eastern Time (US & Canada)"
                  >
                    12:30 PM Eastern Time (US & Canada)
                  </label>
                </div>
                <div
                  class="cf-form-radio-option"
                >
                  <input
                    checked=""
                    id="hearingTime0_Other"
                    name="hearingTime0"
                    type="radio"
                    value="Other"
                  />
                  <label
                    class=""
                    for="hearingTime0_Other"
                  >
                    Other
                  </label>
                </div>
              </div>
            </fieldset>
          </span>
          <div
            class=""
          >
            <div
              class="cf-form-dropdown dropdown-optionalHearingTime0"
            >
              <label
                class="question-label usa-sr-only"
                for="optional-hearing-time-0"
                id="optional-hearing-time-0-label"
              >
                <strong>
                  <span>
                    Hearing Time
                  </span>
                </strong>
              </label>
              <div
                class="cf-select"
              >
                <div
                  class=" css-2b097c-container"
                >
                  <div
                    class="cf-select__control css-yk16xz-control"
                  >
                    <div
                      class="cf-select__value-container css-g1d714-ValueContainer"
                    >
                      <div
                        class="cf-select__placeholder css-1wa3eu0-placeholder"
                      >
                        Select a time
                      </div>
                      <div
                        class="css-81nyic-Input"
                      >
                        <div
                          class="cf-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-labelledby="optional-hearing-time-0-label"
                            aria-owns="optional-hearing-time-0-listbox"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="optional-hearing-time-0"
                            role="combobox"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="optionalHearingTime0"
                    type="hidden"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="helper-text"
          >
            The time at the Board of Veterans' Appeals in Washington, DC
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="cf-help-divider"
      />
      <h2>
        Veteran
      </h2>
      <div
        data-css-1a5irm0=""
      >
        <strong>
          Veteran Name
        </strong>
        <pre>
          Bob Smith
        </pre>
      </div>
      <div
        data-css-1a5irm0=""
      >
        <strong>
          Veteran Mailing Address
        </strong>
        <pre>
          Bob Smith
9999 MISSION ST
SAN FRANCISCO, CA 94103
        </pre>
      </div>
      <div
        class="usa-grid css-1jfbwxw"
      >
        <div
          class="usa-width-one-half"
        >
          <div
            class=""
          >
            <div
              class="cf-form-dropdown dropdown-appellantTz"
              data-css-1dzedb9=""
            >
              <label
                class="question-label"
                for="appellant-tz"
                id="appellant-tz-label"
              >
                <strong>
                  <span>
                    Veteran Timezone
                    <span
                      class="cf-optional"
                    >
                      Optional
                    </span>
                  </span>
                </strong>
              </label>
              <div
                class="cf-select"
              >
                <div
                  class=" css-2b097c-container"
                >
                  <div
                    class="cf-select__control css-yk16xz-control"
                  >
                    <div
                      class="cf-select__value-container cf-select__value-container--has-value css-g1d714-ValueContainer"
                    >
                      <div
                        class="cf-select__single-value css-1uccc91-singleValue"
                      >
                        Pacific Time (US & Canada) (12:30 AM)
                      </div>
                      <div
                        class="css-81nyic-Input"
                      >
                        <div
                          class="cf-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-labelledby="appellant-tz-label"
                            aria-owns="appellant-tz-listbox"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="appellant-tz"
                            role="combobox"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="appellantTz"
                    type="hidden"
                    value="America/Los_Angeles"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="helper-text"
          >
            The hearing time in email notifications is calculated based on the timezone.
          </div>
        </div>
      </div>
      <div
        class="usa-grid css-1jfbwxw"
        id="email-section"
      >
        <div
          class="usa-width-one-half"
        >
          <div
            class="cf-form-textinput cf-inline-field   "
          >
            <label
              for="Veteran Email (for these notifications only)"
            >
              <strong>
                <span>
                  Veteran Email (for these notifications only)
                  <span
                    class="cf-optional"
                  >
                    Optional
                  </span>
                </span>
              </strong>
            </label>
            <div
              class="input-container"
            >
              <input
                class="cf-form-textinput cf-inline-field"
                id="Veteran Email (for these notifications only)"
                name="Veteran Email (for these notifications only)"
                type="text"
                value="tom.brady@caseflow.gov"
              />
            </div>
          </div>
          <div
            class="helper-text"
          >
            This email address will be used to send notifications for this hearing only.
          </div>
        </div>
      </div>
      <div
        class="cf-help-divider"
      />
      <h2>
        Power of Attorney (POA)
      </h2>
      <div
        data-css-1a5irm0=""
      >
        <pre>
          PARALYZED VETERANS OF AMERICA, INC.

        </pre>
      </div>
      <div
        class="usa-grid css-1jfbwxw"
      >
        <div
          class="usa-width-one-half"
        >
          <div
            class=""
          >
            <div
              class="cf-form-dropdown dropdown-representativeTz"
              data-css-1gh7024=""
            >
              <label
                class="question-label"
                for="representative-tz"
                id="representative-tz-label"
              >
                <strong>
                  <span>
                    POA/Representative Timezone
                    <span
                      class="cf-required"
                    >
                      Required
                    </span>
                  </span>
                </strong>
              </label>
              <div
                class="cf-select"
              >
                <div
                  class=" css-2b097c-container"
                >
                  <div
                    class="cf-select__control css-yk16xz-control"
                  >
                    <div
                      class="cf-select__value-container cf-select__value-container--has-value css-g1d714-ValueContainer"
                    >
                      <div
                        class="cf-select__single-value css-1uccc91-singleValue"
                      >
                        Mountain Time (US & Canada) (1:30 AM)
                      </div>
                      <div
                        class="css-81nyic-Input"
                      >
                        <div
                          class="cf-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-labelledby="representative-tz-label"
                            aria-owns="representative-tz-listbox"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="representative-tz"
                            role="combobox"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="representativeTz"
                    type="hidden"
                    value="America/Denver"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="helper-text"
          >
            The hearing time in email notifications is calculated based on the timezone.
          </div>
        </div>
      </div>
      <div
        class="usa-grid css-1jfbwxw"
      >
        <div
          class="usa-width-one-half"
        >
          <div
            class="cf-form-textinput cf-inline-field   "
          >
            <label
              for="POA/Representative Email (for these notifications only)"
            >
              <strong>
                <span>
                  POA/Representative Email (for these notifications only)
                  <span
                    class="cf-optional"
                  >
                    Optional
                  </span>
                </span>
              </strong>
            </label>
            <div
              class="input-container"
            >
              <input
                class="cf-form-textinput cf-inline-field"
                id="POA/Representative Email (for these notifications only)"
                name="POA/Representative Email (for these notifications only)"
                type="text"
                value="tom.brady@caseflow.gov"
              />
            </div>
          </div>
          <div
            class="helper-text"
          >
            This email address will be used to send notifications for this hearing only.
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`HearingConversion Matches snapshot with default props 1`] = `
<DocumentFragment>
  <section
    class="cf-app-segment cf-app-segment--alt"
  >
    <h1
      class="cf-margin-bottom-0"
    >
      Convert to Virtual
    </h1>
    <span>
      Email notifications will be sent to the Veteran, POA / Representative, and Veterans Law Judge (VLJ).
    </span>
    <div>
      <div
        data-css-1a5irm0=""
      >
        Convert to Virtual
      </h1>
      <span>
        Email notifications will be sent to the Veteran, POA / Representative, and Veterans Law Judge (VLJ).
      </span>
      <div>
        <ReadOnly
          label="Hearing Date"
          text="07/06/2020"
        >
          <div
            data-css-1a5irm0=""
          >
            <strong>
              Hearing Date
            </strong>
            <pre>
              07/06/2020
            </pre>
          </div>
          <div
            class="helper-text"
          >
            The hearing time in email notifications is calculated based on the timezone.
          </div>
        </div>
      </div>
      <div
        class="usa-grid css-1jfbwxw"
      >
        <div
          class="usa-width-one-half"
        >
          <div
            class="cf-form-textinput cf-inline-field   "
          >
            <label
              for="Veteran Email (for these notifications only)"
            >
              <strong>
                <span>
                  Veteran Email (for these notifications only)
                  <span
                    class="cf-optional"
                  >
                    Optional
                  </span>
                </span>
              </strong>
            </label>
            <div
              class="input-container"
            >
              <input
                class="cf-form-textinput cf-inline-field"
                id="Veteran Email (for these notifications only)"
                name="Veteran Email (for these notifications only)"
                type="text"
                value="tom.brady@caseflow.gov"
              />
            </div>
          </div>
          <div
            class="helper-text"
          >
            This email address will be used to send notifications for this hearing only.
          </div>
        </div>
      </div>
      <div
        class="cf-help-divider"
      />
      <h2>
        Power of Attorney (POA)
      </h2>
      <div
        data-css-1a5irm0=""
        data-testid="read-only-testid"
      >
        <pre>
          PARALYZED VETERANS OF AMERICA, INC.

        </pre>
      </div>
      <div
        class="usa-grid css-1jfbwxw"
      >
        <div
          class="usa-width-one-half"
        >
          <div
            class=""
          >
            <div
              class="cf-form-dropdown dropdown-representativeTz"
              data-css-1dzedb9=""
            >
              <label
                class="question-label"
                for="representative-tz"
                id="representative-tz-label"
              >
                <strong>
                  <span>
                    POA/Representative Timezone
                    <span
                      class="cf-required"
                    >
                      Required
                    </span>
                  </span>
                </strong>
              </label>
              <div
                class="cf-select"
              >
                <div
                  class=" css-2b097c-container"
                >
                  <div
                    class="cf-select__control css-yk16xz-control"
                  >
                    <div
                      class="cf-select__value-container cf-select__value-container--has-value css-g1d714-ValueContainer"
                    >
                      <div
                        class="cf-select__single-value css-1uccc91-singleValue"
                      >
                        Mountain Time (US & Canada) (1:30 AM)
                      </div>
                      <div
                        class="css-81nyic-Input"
                      >
                        <div
                          class="cf-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-labelledby="representative-tz-label"
                            aria-owns="representative-tz-listbox"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="representative-tz"
                            role="combobox"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="representativeTz"
                    type="hidden"
                    value="America/Denver"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="helper-text"
          >
            The hearing time in email notifications is calculated based on the timezone.
          </div>
        </div>
      </div>
      <div
        class="usa-grid css-1jfbwxw"
      >
        <div
          class="usa-width-one-half"
        >
          <div
            class="cf-form-textinput cf-inline-field   "
          >
            <label
              for="POA/Representative Email (for these notifications only)"
            >
              <strong>
                <span>
                  POA/Representative Email (for these notifications only)
                  <span
                    class="cf-optional"
                  >
                    Optional
                  </span>
                </span>
              </strong>
            </label>
            <div
              class="input-container"
            >
              <input
                class="cf-form-textinput cf-inline-field"
                id="POA/Representative Email (for these notifications only)"
                name="POA/Representative Email (for these notifications only)"
                type="text"
                value="tom.brady@caseflow.gov"
              />
            </div>
          </div>
          <div
            class="helper-text"
          >
            This email address will be used to send notifications for this hearing only.
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`HearingConversion Matches snapshot with default props 1`] = `
<DocumentFragment>
  <section
    class="cf-app-segment cf-app-segment--alt"
  >
    <h1
      class="cf-margin-bottom-0"
    >
      Convert to Virtual
    </h1>
    <span>
      Email notifications will be sent to the Veteran, POA / Representative, and Veterans Law Judge (VLJ).
    </span>
    <div>
      <div
        data-css-1a5irm0=""
        data-testid="read-only-testid"
      >
        <strong>
          Hearing Date
        </strong>
        <pre>
          07/06/2020
        </pre>
      </div>
      <div
        class="usa-grid css-1jfbwxw"
      >
        <div
          class="usa-width-one-half"
        >
          <div
            class=""
          >
            <div
              class="cf-form-dropdown dropdown-optionalHearingTime0"
            >
              <label
                class="question-label"
                for="optional-hearing-time-0"
                id="optional-hearing-time-0-label"
              >
                <strong>
                  <span>
                    Hearing Time
                  </span>
                </strong>
              </label>
              <div
                class="cf-select"
              >
                <div
                  class=" css-2b097c-container"
                >
                  <div
                    class="cf-select__control css-yk16xz-control"
                  >
                    <div
                      class="cf-select__value-container css-g1d714-ValueContainer"
                    >
                      <div
                        class="cf-select__placeholder css-1wa3eu0-placeholder"
                      >
                        Select a time
                      </div>
                      <div
                        class="css-81nyic-Input"
                      >
                        <div
                          class="cf-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-labelledby="optional-hearing-time-0-label"
                            aria-owns="optional-hearing-time-0-listbox"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="optional-hearing-time-0"
                            role="combobox"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="optionalHearingTime0"
                    type="hidden"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="usa-grid css-1jfbwxw"
            >
              <div
                className="usa-width-one-half"
              >
                <HearingEmail
                  email="tom.brady@caseflow.gov"
                  emailType="representativeEmailAddress"
                  helperLabel="This email address will be used to send notifications for this hearing only."
                  label="POA/Representative Email (for these notifications only)"
                  optional={true}
                  showHelper={true}
                  type="change_to_virtual"
                  update={
                    [MockFunction] {
                      "calls": Array [
                        Array [
                          "hearing",
                          Object {
                            "advanceOnDocketMotion": null,
                            "aod": false,
                            "appealExternalId": "005334f7-b5c6-490c-a310-7dc5db22c8c3",
                            "appealId": 4,
                            "appellantAddressLine1": "9999 MISSION ST",
                            "appellantCity": "SAN FRANCISCO",
                            "appellantEmailAddress": "tom.brady@caseflow.gov",
                            "appellantFirstName": "Bob",
                            "appellantIsNotVeteran": false,
                            "appellantLastName": "Smith",
                            "appellantState": "CA",
                            "appellantTz": "America/Los_Angeles",
                            "appellantZip": "94103",
                            "availableHearingLocations": Object {},
                            "bvaPoc": null,
                            "caseType": "Original",
                            "centralOfficeTimeString": "03:30",
                            "claimantId": 4,
                            "closestRegionalOffice": null,
                            "conferenceProvider": "pexip",
                            "currentIssueCount": 1,
                            "disposition": null,
                            "dispositionEditable": true,
                            "docketName": "hearing",
                            "docketNumber": "200628-4",
                            "emailEvents": Array [
                              Object {
                                "emailAddress": "tom.brady@caseflow.gov",
                                "emailType": "confirmation",
                                "sentAt": "2020-06-29T14:55:12.620-04:00",
                                "sentBy": "BVASYELLOW",
                                "sentTo": "POA/Representative Email",
                              },
                              Object {
                                "emailAddress": "Bob.Smith@test.com",
                                "emailType": "confirmation",
                                "sentAt": "2020-06-29T14:55:12.501-04:00",
                                "sentBy": "BVASYELLOW",
                                "sentTo": "Appellant Email",
                              },
                            ],
                            "evidenceWindowWaived": false,
                            "externalId": "9bb8e27e-9b89-48cd-8b0b-2e75cfa5627a",
                            "hearingDayId": 4,
                            "id": 4,
                            "isVirtual": true,
                            "judge": Object {
                              "createdAt": "2020-06-25T11:00:43.257-04:00",
                              "cssId": "BVAAABSHIRE",
                              "displayName": "BVAAABSHIRE (VACO)",
                              "efolderDocumentsFetchedAt": null,
                              "email": null,
                              "fullName": "Aaron Judge_HearingsAndCases Abshire",
                              "id": 3,
                              "lastLoginAt": null,
                              "meetingType": "pexip",
                              "roles": Object {},
                              "selectedRegionalOffice": null,
                              "stationId": "101",
                              "status": "active",
                              "statusUpdatedAt": null,
                              "updatedAt": "2020-06-25T11:00:43.257-04:00",
                            },
                            "judgeId": 3,
                            "location": null,
                            "militaryService": "",
                            "notes": null,
                            "paperCase": false,
                            "poaName": "AMERICAN LEGION",
                            "prepped": null,
                            "readableLocation": "Washington, DC",
                            "readableRequestType": "Central",
                            "regionalOfficeKey": "C",
                            "regionalOfficeName": "Central",
                            "regionalOfficeTimezone": "America/New_York",
                            "representative": "Clarence Darrow",
                            "representativeEmailAddress": "tom.brady@caseflow.gov",
                            "representativeName": "PARALYZED VETERANS OF AMERICA, INC.",
                            "representativeTz": "America/Denver",
                            "room": "2",
                            "scheduledFor": "2020-07-06T06:00:00.000-04:00",
                            "scheduledForIsPast": false,
                            "scheduledTime": "2000-01-01T03:30:00.000-05:00",
                            "scheduledTimeString": "03:30",
                            "summary": null,
                            "transcriptRequested": null,
                            "transcription": Object {},
                            "uuid": "9bb8e27e-9b89-48cd-8b0b-2e75cfa5627a",
                            "veteranAge": 85,
                            "veteranEmailAddress": "Bob.Smith@test.com",
                            "veteranFileNumber": "500000003",
                            "veteranFirstName": "Bob",
                            "veteranGender": "M",
                            "veteranLastName": "Smith",
                            "wasVirtual": false,
                            "witness": null,
                            "worksheetIssues": Object {},
                          },
                        ],
                      ],
                      "results": Array [
                        Object {
                          "type": "return",
                          "value": undefined,
                        },
                      ],
                    }
                  }
                >
                  <TextField
                    className={
                      Array [
                        "cf-form-textinput cf-inline-field",
                      ]
                    }
                    name="POA/Representative Email (for these notifications only)"
                    onChange={[Function]}
                    optional={true}
                    required={false}
                    strongLabel={true}
                    type="text"
                    useAriaLabel={false}
                    value="tom.brady@caseflow.gov"
                  >
                    <div
                      className="cf-form-textinput cf-inline-field   "
                    >
                      <label
                        htmlFor="POA/Representative Email (for these notifications only)"
                      >
                        <strong>
                          <FormLabel
                            name="POA/Representative Email (for these notifications only)"
                            optional={true}
                            required={false}
                          >
                            <span>
                              POA/Representative Email (for these notifications only)
                              <span
                                className="cf-optional"
                              >
                                Optional
                              </span>
                            </span>
                          </FormLabel>
                        </strong>
                      </label>
                      <div
                        className="input-container"
                      >
                        <input
                          className={
                            Array [
                              "cf-form-textinput cf-inline-field",
                            ]
                          }
                          id="POA/Representative Email (for these notifications only)"
                          name="POA/Representative Email (for these notifications only)"
                          onBlur={[Function]}
                          onChange={[Function]}
                          type="text"
                          value="tom.brady@caseflow.gov"
                        />
                      </div>
                    </div>
                  </TextField>
                  <HelperText
                    label="This email address will be used to send notifications for this hearing only."
                  >
                    <div
                      className="helper-text"
                    >
                      This email address will be used to send notifications for this hearing only.
                    </div>
                  </HelperText>
                </HearingEmail>
              </div>
            </div>
          </VirtualHearingSection>
        </RepresentativeSection>
      </div>
    </div>
    <div>
      <div
        class="cf-help-divider"
      />
      <h2>
        Veteran
      </h2>
      <div
        data-css-1a5irm0=""
        data-testid="read-only-testid"
      >
        <strong>
          Veteran Name
        </strong>
        <pre>
          Bob Smith
        </pre>
      </div>
      <div
        data-css-1a5irm0=""
        data-testid="read-only-testid"
      >
        <strong>
          Veteran Mailing Address
        </strong>
        <pre>
          Bob Smith
9999 MISSION ST
SAN FRANCISCO, CA 94103
        </pre>
      </div>
      <div
        class="usa-grid css-1jfbwxw"
      >
        <div
          class="usa-width-one-half"
        >
          <div
            class=""
          >
            <div
              class="cf-form-dropdown dropdown-appellantTz"
              data-css-1dzedb9=""
            >
              <label
                class="question-label"
                for="appellant-tz"
                id="appellant-tz-label"
              >
                <strong>
                  <span>
                    Veteran Timezone
                    <span
                      class="cf-required"
                    >
                      Required
                    </span>
                  </span>
                </strong>
              </label>
              <div
                class="cf-select"
              >
                <div
                  class=" css-2b097c-container"
                >
                  <div
                    class="cf-select__control css-yk16xz-control"
                  >
                    <div
                      class="cf-select__value-container cf-select__value-container--has-value css-g1d714-ValueContainer"
                    >
                      <div
                        class="cf-select__single-value css-1uccc91-singleValue"
                      >
                        Pacific Time (US & Canada) (12:30 AM)
                      </div>
                      <div
                        class="css-81nyic-Input"
                      >
                        <div
                          class="cf-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-labelledby="appellant-tz-label"
                            aria-owns="appellant-tz-listbox"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="appellant-tz"
                            role="combobox"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="appellantTz"
                    type="hidden"
                    value="America/Los_Angeles"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="helper-text"
          >
            The hearing time in email notifications is calculated based on the timezone.
          </div>
        </div>
      </div>
      <div
        class="usa-grid css-1jfbwxw"
        id="email-section"
      >
        <div
          class="usa-width-one-half"
        >
          <div
            class="cf-form-textinput cf-inline-field   "
          >
            <label
              for="Veteran Email (for these notifications only)"
            >
              <strong>
                <span>
                  Veteran Email (for these notifications only)
                  <span
                    class="cf-required"
                  >
                    Required
                  </span>
                </span>
              </strong>
            </label>
            <div
              class="input-container"
            >
              <input
                class="cf-form-textinput cf-inline-field"
                id="Veteran Email (for these notifications only)"
                name="Veteran Email (for these notifications only)"
                type="text"
                value="tom.brady@caseflow.gov"
              />
            </div>
          </div>
          <div
            class="helper-text"
          >
            This email address will be used to send notifications for this hearing only.
          </div>
        </div>
      </div>
      <div
        class="cf-help-divider"
      />
      <h2>
        Power of Attorney (POA)
      </h2>
      <div
        data-css-1a5irm0=""
        data-testid="read-only-testid"
      >
        <pre>
          PARALYZED VETERANS OF AMERICA, INC.

        </pre>
      </div>
      <div
        class="usa-grid css-1jfbwxw"
      >
        <div
          class="usa-width-one-half"
        >
          <div
            class=""
          >
            <div
              class="cf-form-dropdown dropdown-representativeTz"
              data-css-1dzedb9=""
            >
              <label
                class="question-label"
                for="representative-tz"
                id="representative-tz-label"
              >
                <strong>
                  <span>
                    POA/Representative Timezone
                    <span
                      class="cf-required"
                    >
                      Required
                    </span>
                  </span>
                </strong>
              </label>
              <div
                class="cf-select"
              >
                <div
                  class=" css-2b097c-container"
                >
                  <div
                    class="cf-select__control css-yk16xz-control"
                  >
                    <div
                      class="cf-select__value-container cf-select__value-container--has-value css-g1d714-ValueContainer"
                    >
                      <div
                        class="cf-select__single-value css-1uccc91-singleValue"
                      >
                        Mountain Time (US & Canada) (1:30 AM)
                      </div>
                      <div
                        class="css-81nyic-Input"
                      >
                        <div
                          class="cf-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-labelledby="representative-tz-label"
                            aria-owns="representative-tz-listbox"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="representative-tz"
                            role="combobox"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="representativeTz"
                    type="hidden"
                    value="America/Denver"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="helper-text"
          >
            The hearing time in email notifications is calculated based on the timezone.
          </div>
        </div>
      </div>
      <div
        class="usa-grid css-1jfbwxw"
      >
        <div
          class="usa-width-one-half"
        >
          <div
            class="cf-form-textinput cf-inline-field   "
          >
            <label
              for="POA/Representative Email (for these notifications only)"
            >
              <strong>
                <span>
                  POA/Representative Email (for these notifications only)
                  <span
                    class="cf-optional"
                  >
                    Optional
                  </span>
                </span>
              </strong>
            </label>
            <div
              class="input-container"
            >
              <input
                class="cf-form-textinput cf-inline-field"
                id="POA/Representative Email (for these notifications only)"
                name="POA/Representative Email (for these notifications only)"
                type="text"
                value="tom.brady@caseflow.gov"
              />
            </div>
          </div>
          <div
            class="helper-text"
          >
            This email address will be used to send notifications for this hearing only.
          </div>
        </div>
      </div>
    </div>
    <div
      class="cf-help-divider"
    />
    <h2>
      Veterans Law Judge (VLJ)
    </h2>
    <div
      class="usa-grid"
    >
      <div
        class="usa-width-one-half"
      >
        <div
          class=""
        >
          <div
            class="cf-form-dropdown dropdown-judgeDropdown"
          >
            <label
              class="question-label"
              for="judge-dropdown"
              id="judge-dropdown-label"
            >
              <strong>
                <span>
                  VLJ
                </span>
              </strong>
            </label>
            <div
              class="cf-select"
            >
              <div
                class=" css-2b097c-container"
              >
                <div
                  class="cf-select__control css-yk16xz-control"
                >
                  <div
                    class="cf-select__value-container cf-select__value-container--has-value css-g1d714-ValueContainer"
                  >
                    <div
                      class="cf-select__single-value css-1uccc91-singleValue"
                    />
                    <div
                      class="css-81nyic-Input"
                    >
                      <div
                        class="cf-select__input"
                        style="display: inline-block;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-expanded="false"
                          aria-haspopup="true"
                          aria-labelledby="judge-dropdown-label"
                          aria-owns="judge-dropdown-listbox"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          id="judge-dropdown"
                          role="combobox"
                          spellcheck="false"
                          style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-6q0nyr-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="judgeDropdown"
                  type="hidden"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-1a5irm0=""
      data-testid="read-only-testid"
    >
      <strong>
        VLJ Email
      </strong>
      <pre>
        N/A
      </pre>
    </div>
  </section>
</DocumentFragment>
`;
